--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@ html{
 }
 
 body{
-    background-color: black;
-    color: white;
+    background-image:url("https://res.cloudinary.com/dakf8k6nv/image/upload/v1701685413/wnubidpcghmhdui4etei.jpg"); /* Adjust colors as needed */
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-size: 104% 104%;
+            color: rgb(98, 234, 227);
 }
 
 #header{
@@ -394,7 +397,7 @@ form .btn2{
     <div id="header">
     <div class="container">
         <nav>
-            <img src="https://th.bing.com/th/id/OIP.5MBy_qvYiBGc2kxkX9fswQHaE8?pid=ImgDet&rs=1" class="logo">
+            <img src="C:\Users\Ayesha Siddikha\Desktop\portfolio\logo.jpeg" class="logo">
             <ul id="sidemenu">
                 <li><a href="#header">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -432,7 +435,7 @@ form .btn2{
                             </div>
                             <div class="tab-contents active-tab" id="personal information">
                                 <ul>
-                                    <li><span>Mail ID:</span><br>rahad543371@gmail.com</li>
+                                    <li><span>Mail ID:</span><br>ayeshasiddikhaa543371@gmail.com</li>
                                     <li><span>Contact No:</span><br>9398612441</li>
                                     <li><span>Date of Birth</span><br>20-03-2003</li>
                                 </ul>
@@ -456,7 +459,7 @@ form .btn2{
             <div class="Skills-list">
                 <div>
                     <h2>Technical Skills:</h2>
-                    <p>- HTML<br>- C-Lang<br>- PYTHON Basics<br>- JAVA Basics<br></p>
+                    <p>- HTML<br>- PYTHON<br>- C-Language Bsics <br>- JAVA Basics<br></p>
                 </div>
                 <div>
                     <h2>Strenghts:</h2>
@@ -514,7 +517,7 @@ form .btn2{
             <img src="certificate4.jpeg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">SKILL BUILD</h5>
-              <p class="card-text">For Successfully Completed course on<br> Front End Development.</p> 
+              <p class="card-text">For Successfully Completed Internship on<br> Front End Development.</p> 
             </div>
           </div>
           
@@ -529,7 +532,7 @@ form .btn2{
         <div class="row">
             <div class="contact-left">
                 <h1 class="sub-title">Contact Me</h1>
-                <p><i class="fas fa-paper-plane"></i>rahad543371@gmail.com</p>
+                <p><i class="fas fa-paper-plane"></i>ayeshasiddikhaa543371@gmail.com</p>
                 <p><i class="fas fa-phone-square-alt"></i>9398612441</p>
                 <div class="social-icons">
                     <a href="https://g.co/kgs/jcYqS9"><i class="fa fa-map-marker"></i><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d61477.19649007295!2d77.23001345314549!3d15.627684257151214!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bb64dc373348917%3A0xef0a28d2a89bf5de!2sAdoni%2C%20Andhra%20Pradesh!5e0!3m2!1sen!2sin!4v1689667806409!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></a>
