--- a/index.html
+++ b/index.html
@@ -482,20 +482,20 @@ form .btn2{
       <div class="row">
         <div class="col-md-6">
           <div class="card mb-3">
-            <img src="certificate1.jpeg" class="card-img-top" alt="...">
+            <img src="Certificate1 NPTEL.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">DEVTOWN</h5>
-              <p class="card-text">For Successfully Completed Course on<br> Deep Learning using python. </p>
+              <h5 class="card-title">NPTEL</h5>
+              <p class="card-text">For Successfully Completed Course on<br> NPTEL Introduction To Internet Of Things. </p>
             </div>
           </div>
           
         </div>
         <div class="col-md-6">
           <div class="card mb-3">
-            <img src="certificate2.jpeg" class="card-img-top" alt="...">
+            <img src="Certificate2 CodeClause.jpeg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">DEVTOWN</h5>
-              <p class="card-text"> Certificate on Front End Development<br> using Java script and React.js.</p> 
+              <h5 class="card-title">CODECLAUSE</h5>
+              <p class="card-text"> For Successfully Completed Artificial Intelligence<br> Internship on CodeClause using Python </p> 
             </div>
           </div>
           
